--- a/index.html
+++ b/index.html
@@ -6,10 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/javascript/app.js"></script>
     <title>Trivia Game</title>
 </head>
 <body>
-    
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="jumbotron">Trivia!</h1>
+
+          <div id="intro">
+            <button id="start" class="start-restart">Start!</button>
+          </div>
+
+          <div id="questions">
+            <h3 id="time">
+              Time Remaining: <span id="remaining">30</span> Seconds
+            </h3>
+             <p id="questionText"></p>
+            <p id="answers"></p>
+          </div>
+
+          <div id="outro">
+              <button id="restart" class="start-restart">Start!</button>
+          </div>
+
+        </div>
+      </div>
+    </div>
 </body>
 </html>
