--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h1 class="jumbotron">Trivia!</h1>
 
           <div id="intro">
-            <button id="start" class="start-restart">Start!</button>
+            <button id="start" class="start-restart btn btn-primary">Start!</button>
           </div>
 
           <div id="questions">
@@ -28,11 +28,14 @@
               Time Remaining: <span id="remaining">30</span> Seconds
             </h3>
              <p id="questionText"></p>
-            <p id="answers"></p>
+            <div id="answers">
+
+            </div>
+            <button id="next" class="next btn btn-primary">Next</button>
           </div>
 
           <div id="outro">
-              <button id="restart" class="start-restart">Start!</button>
+              <button id="restart" class="start-restart btn btn-primary">Restart</button>
           </div>
 
         </div>
