--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
           </div>
 
           <div id="outro">
+              <div id="correct">Correct Answers:<span></span></div>
+              <div id="wrong">Wrong Answers:<span></span></div>
+              <div id="unanswered">Unanswered:<span></span></div>
               <button id="restart" class="start-restart btn btn-primary">Restart</button>
           </div>
 
